--- a/resource-role.yaml
+++ b/resource-role.yaml
@@ -30,11 +30,13 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                - "initech:CreateReport"
-                - "initech:DeleteReport"
-                - "initech:DescribeReport"
-                - "initech:ListReports"
-                - "initech:UpdateReport"
+                - "kms:Decrypt"
+                - "kms:Encrypt"
+                - "kms:GenerateDataKey"
+                - "ssm:DeleteParameter"
+                - "ssm:DescribeParameters"
+                - "ssm:GetParameter"
+                - "ssm:PutParameter"
                 Resource: "*"
 Outputs:
   ExecutionRoleArn:
