--- a/template.yml
+++ b/template.yml
@@ -14,6 +14,8 @@ Resources:
       Handler: dist/handlers.testEntrypoint
       Runtime: nodejs20.x
       CodeUri: ./
+      Architectures:
+        - arm64
 
   TypeFunction:
     Type: AWS::Serverless::Function
@@ -21,5 +23,12 @@ Resources:
       Handler: dist/handlers.entrypoint
       Runtime: nodejs20.x
       CodeUri: ./
-    Metadata:
-      BuildMethod: makefile
+      Architectures:
+        - arm64
+    Metadata: # Manage esbuild properties
+      BuildMethod: esbuild
+      BuildProperties:
+        Minify: true
+        Target: "es2020"
+        Sourcemap: true
+        
