--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "moduleResolution": "node",
         "allowJs": true,
         "experimentalDecorators": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "skipLibCheck": true
     },
     "include": [
         "src/**/*.ts"
